--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2004,6 +2004,7 @@
         .mode-toggle-btn {
             width: 50px;
             height: 30px;
+            margin-right: 5px;
             padding: 0;
             background-color: #4CAF50;
             color: white;
